--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,100;0,400;0,500;0,700;1,200&family=Poppins:wght@100;200;300;500&display=swap"
       rel="stylesheet"
     />
-    <!-- <link
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"
-    /> -->
+    />
     <title>React Project 2</title>
   </head>
   <body>
