added google analytrics

--- a/index.html
+++ b/index.html
@@ -2,6 +2,27 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="Open Peaks" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://m-soro.github.io/Project_2/" />
+    <meta
+      property="og:description"
+      content="Open Peaks lets you check skiing and snowboarding conditions all over the world! A project for Software Engineering track in Per Scholas by Mark Soro"
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/m-soro/Project_2/main/src/assets/images/openPeaks.png"
+    />
+    <meta
+      name="description"
+      content="Open Peaks lets you check skiing and snowboarding conditions all over the world! A project for Software Engineering track in Per Scholas by Mark Soro"
+    />
+    <meta name="”robots”" content="index, follow" />
+    <meta
+      name="keywords"
+      content="HTML, CSS, JavaScript, Mark Soro, Software Engineer, Software Developer, Per Scholas, Washington, DC, Alexandria, VA, MD"
+    />
+    <meta name="author" content="Mark Soro" />
     <link
       rel="icon"
       type="image/svg+xml"
@@ -22,6 +43,20 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-2L5SY0F52S"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-2L5SY0F52S");
+    </script>
     <script type="module" src="/src/main.jsx"></script>
     <title>Open Peaks</title>
   </head>
