--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/m-soro/Project_2/main/src/assets/images/openPeaks.png"
+      content="https://raw.githubusercontent.com/m-soro/Project_2/main/src/assets/images/openPeaks.png?raw=true"
     />
     <meta
       name="description"
